--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body{
     border-radius: 43px;
     color: aliceblue;
     position: relative;
-    right: 142px;
+    left: 5px;
 }
 input[type="text" i] {
     height: 48px;
